create interested trip
